# cmsc330spring2024

./: .gitignore  LICENSE  README.md  closures.md  datatypes.md  exception.md  imperative.md  lambda.md  map_fold_tail.md  modules.md  notes.md  parser.md  pbt.md  rust.md  rust99.md  rust_closure.md  semantics.md
dune/math-example/lib/: dune  math.ml  math.mli
dune/set-example/src/: dune  set_main.ml  simple_set.ml
dune/set-example/tests/: dune  tests.ml
examples/: eval_subst.ml  expr.ml  interp.ml  map_func.ml  nat.ml  parse_add_mult.ml  parser_postfix_exp.ml
examples/lambda/: dune-project  lambda.opam
examples/lambda/_build/: .db  .digest-db  log
examples/lambda/src/: dune  encoding.ml  lambda.ml  pp.ml
examples/lambda/test/: dune
examples/module/abstract_stack/: README.md  liststack.ml  main.ml
examples/module/fraction/: README.md  fraction.ml
examples/module/fraction_hide/: README.md  fraction.ml
examples/module/liststack/: Stack.mli  liststack.ml
examples/module/ocamlgraph/: README.md
examples/module/signature_with_2_impl/: Add.cmi
examples/module/variantstack/: Stack.mli  varstack.ml
examples/parser/: dune-project
examples/parser_class_example/: README.md  parsetree.dot
examples/rust/: command_line_args.rs  enum_ipaddr.rs  point.rs  point_mutate.rs  point_trait.rs  rectangle.rs  summary.rs  trait_printable.rs
nfa2dfa/: dfa1.dot  dfa2.dot  dfa3.dot  dfa4.dot  dfa5.dot  dfa6.dot  nfa1.dot  nfa2.dot  nfa2dfa.md  nfa3.dot  nfa4.dot  nfa5.dot  nfa6.dot  nfa7.dot
regex/: dune-project
regex/lib/: dune  regex.ml
regex/test/: dune
(+91 files in other folders)
